feat: added form for edit and body bytes
